# pytest-kind

./: .gitignore  Makefile  README.md  pyproject.toml
examples/aiohttp-helloworld/: Dockerfile  Makefile  README.md  deployment.yaml  pyproject.toml  web.py
examples/aiohttp-helloworld/tests/: test_web.py
pytest_kind/: __init__.py  cluster.py  plugin.py
tests/: test_cluster.py  test_plugin.py
