[tool.poetry]
name = "pytest-kind"
version = "0.1.0"
description = "Kubernetes test support with KIND for pytest"
authors = ["Henning Jacobs <henning@jacobs1.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
