[tool.poetry]
name = "aiohttp-helloworld"
version = "0.1.0"
description = "Basic example of pytest-kind"
authors = ["Henning Jacobs <henning@jacobs1.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-kind = "=0.6.0"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
